--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^6.10.1",
     "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
     "pg": "^7.11.0",
     "sequelize": "^5.9.2"
   },
@@ -34,6 +39,8 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "mocha": "^6.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
